# ai-videocut

./: .gitignore  Agent.md  README.md  docker-compose.yml  findings.md  progress.md  task_plan.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes_comfyui.py  routes_result.py  routes_tasks.py  routes_upload.py
backend/app/core/: config.py  constants.py
backend/app/models/: schemas.py  task.py
backend/app/services/: comfyui_service.py  ffmpeg_service.py  highlight_selector.py  hook_selector.py  material_inserter.py  storage_service.py  task_queue.py  task_repository.py  task_service.py  transition_service.py  video_analyzer.py
backend/app/utils/: ffmpeg_utils.py  file_utils.py  time_utils.py
backend/app/workers/: video_pipeline.py
comfyui-workflows/: enhance_frame_workflow.json  hook_cover_workflow.json  score_video_workflow.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/api/: comfyuiApi.ts  taskApi.ts  uploadApi.ts
frontend/src/components/: ComfyUIStatus.tsx  ConfigPanel.tsx  MaterialList.tsx  MetadataPanel.tsx  ProgressPanel.tsx  UploadForm.tsx  VideoPlayer.tsx
frontend/src/hooks/: useTaskProgress.ts
frontend/src/pages/: HomePage.tsx  ResultPage.tsx
scripts/: deploy_local.sh  start_all.sh  start_backend.sh
