[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jianxin.xie",email = "jianxin.xie@advantech.com.cn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
